fix:감정 기록 색상오류 수정

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -17,6 +17,8 @@
   --color-anxiety: #e99400;
   --color-panic-bg: #ffdaf6;
   --color-panic: #b9509f;
+  --color-hurt-bg: #deffe4;
+  --color-hurt: #23b83f;
   --color-neutral-bg: #ebebeb;
   --color-neutral: #939090;
 }
